[package]
name = "gurama"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
llm = { git = "https://github.com/rustformers/llm", rev = "3becd728c0d6eeb2d649f86158c7018d5aaaba40", version = "0.2.0-dev" }
num_cpus = "1.15.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros"] }
